# DAMIL

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main_damil.py  utils.py
src/core/: __init__.py  adapt.py  adapt_pmcdda.py  pretrain.py  pretrain_parallel.py
src/dataset_digit/: __init__.py  bag_maker.py  bag_maker_random.py  data_loader.py
src/models/: __init__.py  bag_classifier.py  encoder.py  instance_classifier.py
