[tool.poetry]
name = "damil"
version = "0.1.0"
description = ""
authors = ["shutakahama <shutaka.sukehama@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
numpy = "^1.24.2"
torchvision = "^0.14.1"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
